- [BREAKING CHANGE] The built-in font files arial-15.fnt and arial-15.png have been replaced with lsans-15.fnt and lsans-15.png; this may change some text layout that uses the built-in font, and code that expects arial-15 assets to be present must change to lsans-15.
- [BREAKING CHANGE] Legacy LWJGL3 projects must update the sourceCompatibility to 1.8 or higher.
- API Addition: Added LWJGL3 ANGLE support for x86_64 Windows, Linux, and macOS. Emulates OpenGL ES 2.0 through DirectX (Windows), desktop OpenGL (Linux), and Metal (macOS). May become the preferred method of rendering on macOS if Apple removes OpenGL support entirely. May fix some OpenGL driver issues. More information here: https://github.com/libgdx/libgdx/pull/6672
- iOS: Update to MobiVM 2.3.15
- Update to LWJGL 3.3.0
- API Addition: ObjLoader now supports ambientColor, ambientTexture, transparencyTexture, specularTexture and shininessTexture
- API Addition: PointSpriteParticleBatch blending is now configurable.
- TOOLS Features: Blending mode and sort mode can be changed in Flame particle 3D editor.
- API Addition: Polygon methods setVertex, getVertex, getVertexCount, getCentroid.
- API Addition: TMX built-in tile property "type" is now supported.
- API Addition: Octree structure.
- API Addition: Added StringBuilder#toStringAndClear() method.
- FirstPersonCameraController keys mapping is now configurable
- Fix: GlyphLayout: Several fixes for color markup runs with multi-line or wrapping texts
- API change: GlyphLayout#GlyphRun is now one GlyphRun per line. "color" was removed from GlyphRun and is now handled by GlyphLayout.
- Gdx Setup Tool: Target Android API 30 and update AGP plugin to 4.1.3
- API Fix: Sound IDs are now properly removed; this prevents changes to music instances with the same ID
- API Fix: LWJGL3Net#openURI does now work on macOS & JDK >= 16
- API Fix: Fixed a possible deadlock with AssetManager#dispose() and #clear()