@@ -168,10 +168,11 @@ task fetchNativesZip() {
 		def zip = file("build/natives.zip");
 		new URL('https://libgdx-nightlies.s3.eu-central-1.amazonaws.com/libgdx-nightlies/natives.zip').withInputStream{ i -> file("build/natives.zip").withOutputStream{ it << i }}
         new URL('https://raw.githubusercontent.com/libgdx/gdx-angle-natives/master/gdx-angle-natives.zip').withInputStream{ i -> file("build/gdx-angle-natives.zip").withOutputStream{ it << i }}
-
+        new URL('https://raw.githubusercontent.com/badlogic/glfw/master/libglfw.dylib').withInputStream{ i -> file("extensions/gdx-lwjgl3-glfw-awt-macos/res/macosx64/libglfw.dylib").withOutputStream{ it << i }}
 	}
 	outputs.file(file("build/natives.zip"))
     outputs.file(file("build/gdx-angle-natives.zip"))
+    outputs.file(file("extensions/gdx-lwjgl3-glfw-awt-macos/res/macosx64/libglfw.dylib"))
 }
 
 task fetchNativesLwjglAngle(dependsOn: fetchNativesZip, type: Copy) {
