@@ -33,6 +33,7 @@ include ":extensions:gdx-freetype"
 include ":extensions:gdx-setup"
 include ":extensions:gdx-tools"
 include ":extensions:gdx-lwjgl3-angle"
+include ":extensions:gdx-lwjgl3-glfw-awt-macos"
 
 include ":tests"
 include ":tests:gdx-tests"
