@@ -26,6 +26,7 @@ dependencies {
 	implementation project(":tests:gdx-tests")
 	implementation project(":backends:gdx-backend-lwjgl3")
 	implementation project(":extensions:gdx-lwjgl3-angle")
+	implementation project(":extensions:gdx-lwjgl3-glfw-awt-macos")
 	implementation testnatives.desktop
 }
 
