@@ -4,15 +4,17 @@ package com.badlogic.gdx.tests.lwjgl3;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.lang.management.ManagementFactory;
 import java.net.URL;
 
 import javax.imageio.ImageIO;
 import javax.swing.*;
 
+import com.badlogic.gdx.backends.lwjgl3.awt.GlfwAWTLoader;
+import com.badlogic.gdx.utils.SharedLibraryLoader;
 import org.lwjgl.glfw.GLFWMouseButtonCallback;
 import org.lwjgl.opengl.GL;
 import org.lwjgl.opengl.GL11;
+import org.lwjgl.system.Configuration;
 
 import static org.lwjgl.glfw.GLFW.*;
 
@@ -50,17 +52,10 @@ public class AwtTestLWJGL {
 	};
 
 	public static void main (String[] args) throws Exception {
-
-		System.out.println(ManagementFactory.getRuntimeMXBean().getName());
-		EventQueue.invokeAndWait(new Runnable() {
-			public void run () {
-				Toolkit.getDefaultToolkit();
-				new BufferedImage(100, 100, BufferedImage.TYPE_INT_ARGB);
-			}
-		});
-
-		// Configuration.GLFW_CHECK_THREAD0.set(false);
-		// Configuration.GLFW_LIBRARY_NAME.set("/Users/badlogic/workspaces/libgdx/glfw/cmake-build-debug/src/libglfw.dylib");
+		if (SharedLibraryLoader.isMac) {
+			Configuration.GLFW_CHECK_THREAD0.set(false);
+			Configuration.GLFW_LIBRARY_NAME.set(GlfwAWTLoader.load().getAbsolutePath());
+		}
 
 		if (!glfwInit()) {
 			System.out.println("Couldn't initialize GLFW");
